@@ -47,19 +47,19 @@ if "!compileNeeded!"=="true" (
 
     echo ? Compiling udemy_lpa_javamasterclass  >> "%logFile%"
     dir /s /b "%PROJECT_ROOT%\src\main\java\*.java" > sources_main_master.txt
-    "%JAVA_HOME%\bin\javac" -encoding UTF-8 -d "%OUT_PROD_DIR%\udemy_lpa_javamasterclass" @sources_main_master.txt >> "%logFile%" 2>&1
+    "%JAVA_HOME%\bin\javac" --enable-preview --release 17 -encoding UTF-8 -d "%OUT_PROD_DIR%\udemy_lpa_javamasterclass" @sources_main_master.txt >> "%logFile%" 2>&1
 
     echo ? Compiling misc_utils depends on masterclass >> "%logFile%"
     dir /s /b "%PROJECT_ROOT%\misc_utils\src\main\java\*.java" > sources_main_misc.txt
-    "%JAVA_HOME%\bin\javac" -encoding UTF-8 -d "%OUT_PROD_DIR%\misc_utils" -cp "%OUT_PROD_DIR%\udemy_lpa_javamasterclass" @sources_main_misc.txt >> "%logFile%" 2>&1
+    "%JAVA_HOME%\bin\javac" --enable-preview --release 17 -encoding UTF-8 -d "%OUT_PROD_DIR%\misc_utils" -cp "%OUT_PROD_DIR%\udemy_lpa_javamasterclass" @sources_main_misc.txt >> "%logFile%" 2>&1
 
     echo ? Compiling udemy_lpa_javamasterclass TEST classes  >> "%logFile%"
     dir /s /b "%PROJECT_ROOT%\src\test\java\*.java" > sources_test_master.txt
-    "%JAVA_HOME%\bin\javac" -encoding UTF-8 -d "%OUT_TEST_DIR%\udemy_lpa_javamasterclass" -cp "%OUT_PROD_DIR%\udemy_lpa_javamasterclass" @sources_test_master.txt >> "%logFile%" 2>&1
+    "%JAVA_HOME%\bin\javac" --enable-preview --release 17 -encoding UTF-8 -d "%OUT_TEST_DIR%\udemy_lpa_javamasterclass" -cp "%OUT_PROD_DIR%\udemy_lpa_javamasterclass" @sources_test_master.txt >> "%logFile%" 2>&1
 
     echo ? Compiling misc_utils TEST classes  >> "%logFile%"
     dir /s /b "%PROJECT_ROOT%\misc_utils\src\test\java\*.java" > sources_test_misc.txt
-    "%JAVA_HOME%\bin\javac" -encoding UTF-8 -d "%OUT_TEST_DIR%\misc_utils" -cp "%OUT_PROD_DIR%\misc_utils;%OUT_PROD_DIR%\udemy_lpa_javamasterclass" @sources_test_misc.txt >> "%logFile%" 2>&1
+    "%JAVA_HOME%\bin\javac" --enable-preview --release 17 -encoding UTF-8 -d "%OUT_TEST_DIR%\misc_utils" -cp "%OUT_PROD_DIR%\misc_utils;%OUT_PROD_DIR%\udemy_lpa_javamasterclass" @sources_test_misc.txt >> "%logFile%" 2>&1
 ) else (
     echo ? Using precompiled class files >> "%logFile%"
 )
